# rp2350-hid-bridge

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  memory.x
.cargo/: config.toml
.github/workflows/: build.yml
src/: command.rs  hidpp.rs  lib.rs  main.rs  tasks.rs  usb_desc.rs
tests/: __init__.py  test_hid_bridge_commands.py
tools/: __init__.py  hid_bridge_commands.py  hid_bridge_gui.py
