[package]
name = "rp2350-hid-bridge"
version = "0.2.0"
edition = "2021"
description = "UART to USB HID bridge firmware for Waveshare RP2350-Plus-16MB-M"
license = "MIT"

[[bin]]
name = "rp2350-hid-bridge"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"] }
serde-json-core = "0.6"

[target.'cfg(target_arch = "arm")'.dependencies]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = ["platform-cortex-m", "executor-thread"] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", branch = "main", features = ["rp235xa", "time-driver", "critical-section-impl"] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", branch = "main" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", branch = "main" }

usbd-hid = "0.10.0"
heapless = "0.9.3"

cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
panic-halt = "1.0"
defmt = "1.1.0"
defmt-rtt = "1.2.0"
static_cell = "2.1.1"
embedded-io-async = "0.7.0"

[profile.release]
opt-level = "s"
lto = true
debug = 2
